# dental-patient-schedule

./: LICENSE  README.md  database.dbml  docker-compose.yml  package-lock.json
dps-api/: .flaskenv  db.py  env-example-dev  pyproject.toml  requirements.txt  wsgi.py
dps-api/db/: model.py
dps-api/db-utils/: tables.sql
dps-api/db-utils/typings/: sql_alchemy.py
dps-api/dps_api/: __init__.py  model.py
dps-api/dps_api/blueprints/: appointments.py  auth.py  base.py  dentist.py  patient.py
dps-api/dps_api/db/: model.py
dps-api/tests/: test_dps_api.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/general/: Dashboard.jsx  Landing.jsx  Login.jsx  Profile.jsx  Register.jsx  Sidebar.jsx
frontend/src/components/mock/: Notifications.jsx
frontend/src/components/rigged/: Book.jsx  Booking.jsx  Calendar.jsx  Message.jsx  Setting.jsx
ui/: package-lock.json  package.json
ui/src/: App.css
ui/src/components/general/: Profile.jsx
ui/src/components/mock/: config.js  data.js
