[tool.poetry]
name = "dps-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
Flask-Cors = "^3.0.10"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.31"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.2"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
